Ruuvi/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ruuvi-deployment
spec:
  selector:
    matchLabels:
      app: ruuvi-pod
  replicas: 1
  template:
    metadata:
      labels:
        app: ruuvi-pod
    spec:
      containers:
      - name: ruuvi-container
        image: "ruuviapi:latest"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 80
        livenessProbe:
           httpGet:
            path: /api/tags
            port: 80
        readinessProbe:
          httpGet:
            path: /api/tags 
            port: 80
