Ruuvi/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ruuvi-service
spec:
  selector:
    app: ruuvi-pod
  ports:
  - port: 8080
    targetPort: 80
  type: LoadBalancer
